<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/yourPoints"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="148dp"
        android:shadowColor="@color/colorPrimary"
        android:text="@string/p1"
        android:textColor="@color/colorPrimary"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/computerPoints"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="148dp"
        android:layout_marginBottom="677dp"
        android:text="@string/p2"
        android:textColor="@color/colorPrimary"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/button"
        android:layout_width="296dp"
        android:layout_height="63dp"
        android:layout_marginStart="120dp"
        android:layout_marginEnd="121dp"
        android:layout_marginBottom="112dp"
        android:background="#F44336"
        android:onClick="onClick"
        android:shadowColor="#F44336"
        android:text="@string/button"
        android:textColor="#FFFFFF"
        android:textColorHighlight="#F44336"
        android:textColorHint="#F44336"
        android:textColorLink="#F44336"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/cube1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="156dp"
        android:layout_marginTop="305dp"
        android:layout_marginEnd="23dp"
        android:layout_marginBottom="177dp"
        android:text="@string/c1"
        android:textSize="70sp"
        app:layout_constraintBottom_toTopOf="@+id/button"
        app:layout_constraintEnd_toStartOf="@+id/cube2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.397" />

    <TextView
        android:id="@+id/cube2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="23dp"
        android:layout_marginTop="305dp"
        android:layout_marginEnd="152dp"
        android:layout_marginBottom="177dp"
        android:text="@string/c2"
        android:textSize="70sp"
        app:layout_constraintBottom_toTopOf="@+id/button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/cube1"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.397" />

    <TextView
        android:id="@+id/whoTurn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="176dp"
        android:layout_marginTop="269dp"
        android:layout_marginEnd="176dp"
        android:layout_marginBottom="327dp"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/name1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="20dp"
        android:text="@string/n1"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/name2"
        app:layout_constraintEnd_toStartOf="@+id/yourPoints"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/name2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="254dp"
        android:text="@string/n2"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/cube1"
        app:layout_constraintEnd_toStartOf="@+id/computerPoints"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/yourPoints"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="75dp"
        android:layout_marginStart="21dp"
        android:layout_marginTop="67dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="38dp"
        android:text="@string/about1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button" />

</androidx.constraintlayout.widget.ConstraintLayout>